5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1771_3121.log
== TEST (2019-05-22 21:04:17) 
-- CODE:
x=array(input("Jogdas de Eusapia: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=array(input())
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:04:32) 
-- CODE:
from numpy import*
x=array(input("Jogdas de Eusapia: "))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:04:45) 
-- CODE:
from numpy import*
x=array(input("Jogdas de Eusapia: "))
print(x[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:05:09) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
print(x[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:17) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])>(y[f])):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:16:33) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])>(y[f])):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.362256
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:40) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])>(y[f])):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:16:56) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])>(y[f])):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:18:28) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])==22)and((y[f]==33)):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:18:28) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])==22)and((y[f]==33)):
		o=o+1
		g=g+1
		f=f+1
	elif((x[f])<(y[f])):
		k=k+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:19:22) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f])==22)and((y[f]==33)):
		k=k+1
		g=g+1
		f=f+1
	elif((x[f]==33)and(y[f]==22)):
		o=o+1
		g=g+1
		f=f+1
		
if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:23:27) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f]==11)and(y[f]==33))or((x[f]==22)and(y[f]==11))or((x[f]==33)and(y[f]==22)):
		o=o+1
		f=f+1
		g=g+1
	elif((y[f]==11)and(x[f]==33))or((y[f]==22)and(x[f]==11))or((y[f]==33)and(x[f]==22)):
		k=k+1
		f=f+1
		g=g+1
		

if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:23:48) 
-- CODE:
from numpy import*
x=array(eval(input("Jogadas de Eusapia: ")))
y=array(eval(input("Jogadas de Barsanulfo: ")))
print(size(x))
f=0
g=0
h=0
o=0
k=0
while(g<(size(x))):
	if((x[f])==(y[f])):
		h=h+1
		g=g+1
		f=f+1
	elif((x[f]==11)and(y[f]==33))or((x[f]==22)and(y[f]==11))or((x[f]==33)and(y[f]==22)):
		o=o+1
		f=f+1
		g=g+1
	elif((y[f]==11)and(x[f]==33))or((y[f]==22)and(x[f]==11))or((y[f]==33)and(x[f]==22)):
		k=k+1
		f=f+1
		g=g+1
		

if(o>k):
	print("EUSAPIA")
elif(k>o):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.446701
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
